--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage":"https://andrewkss7800.github.io/WEB-CSD/"
   "scripts": {
     "dev": "vite",
     "build": "vite build",
