--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage":"https://andrewkss7800.github.io/WEB-CSD/"
+  "homepage": "https://andrewkss7800.github.io/WEB-CSD/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages –d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -23,6 +25,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
